syntax = "proto3";

package m10.pvp.metadata;

message FxAgreement {
  /// Serialized [`FxQuote`]
  bytes quote = 1;
  repeated Signature signatures = 2;
}

message FxQuote {
    FxAmount base = 1;
    FxAmount target = 2;
    uint64 nonce = 3;
}

message FxAmount {
    // Value
    uint64 amount = 1;
    // M10 Ledger account ID
    bytes account_id = 2;
    // M10 Ledger identifier
    string ledger = 3;
}

message Signature {
  bytes public_key = 2;
  bytes signature = 3;
  Algorithm algorithm = 4;
}

enum Algorithm {
    P256_SHA256_ASN1 = 0;
    ED25519 = 1;
}